--- a/translations/ru/mkdocs.yml
+++ b/translations/ru/mkdocs.yml
@@ -788,6 +788,7 @@ pages:
 # Не меняйте в PR'ах то, что ниже
 site_name: Crafttweaker Documentation
 site_author: Team CraftTweaker and any Contributors to the CrT Wiki GitHub repository
+site_url: "https://docs.blamejared.com/1.12/ru/"
 
 repo_url: 'https://github.com/CraftTweaker/CraftTweaker-Documentation'
 repo_name: 'Visit this wiki on GitHub'
