--- a/translations/zh/mkdocs.yml
+++ b/translations/zh/mkdocs.yml
@@ -788,6 +788,7 @@ pages:
 # 不得在提交的 Pull Request 中修改以下的内容
 site_name: Crafttweaker Documentation
 site_author: Team CraftTweaker and any Contributors to the CrT Wiki GitHub repository
+site_url: "https://docs.blamejared.com/1.12/zh/"
 
 repo_url: 'https://github.com/CraftTweaker/CraftTweaker-Documentation'
 repo_name: 'Visit this wiki on GitHub'
