--- a/translations/ja/mkdocs.yml
+++ b/translations/ja/mkdocs.yml
@@ -1,5 +1,5 @@
 # If you add a page, you must add it to the index here
-pages:
+nav:
   - ホーム: 'index.md'
   - Getting Started With Scripts: 'getting_started.md'
   - Commands: "commands.md"
@@ -124,6 +124,7 @@ site_url: "https://docs.blamejared.com/1.14/ja/"
 
 repo_url: 'https://github.com/CraftTweaker/CraftTweaker-Documentation'
 repo_name: 'Visit this wiki on GitHub'
+google_analytics: ['UA-130251586-3', 'https://docs.blamejared.com']
 
 markdown_extensions:
   - admonition
@@ -132,17 +133,24 @@ markdown_extensions:
   - toc:
       anchorlink: True
 
-
-theme_dir: 'mkdocs_windmill'
-extra_css:
-    - css/styles.css
-extra_javascript:
-    - js/highlightjs-zenscript.js
-    - js/init-zs-highlight.js
+theme:
+  name: null
+  custom_dir: 'mkdocs_zen/'
+  include_search_page: True
+  search_index_only: True
 
 extra:
-  logo: 'assets/logo.png'
+  logo: 'assets/logo.svg'
   #article_nav_top: true
   #artivle_nav_bottom: true
   #history_buttons: false
   version: 'CrT v5.0.0'
+  patreon_link: "https://www.patreon.com/bePatron?u=104953&s=docs"
+
+plugins:
+  - search
+  - minify:
+      minify_html: true
+      htmlmin_opts:
+        remove_comments: true
+  - use-site-url
